# lms_project

./: .coverage  .envsample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: groups.json  payment_data.json
studies/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
studies/migrations/: 0001_initial.py  0002_alter_lesson_options_rename_name_course_title_and_more.py  0003_alter_lesson_preview.py  0004_alter_lesson_course.py  0005_course_owner_lesson_owner.py  0006_subscribe.py  0007_rename_subscribe_subscription.py  0008_alter_lesson_course.py  0009_course_price.py  0010_alter_course_price.py  0011_alter_subscription_course.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py  0004_alter_user_managers.py  0005_alter_payment_options_payment_link_and_more.py
